Bug 84832 - FILESAVE: RTF - table space to content lost
Summary: FILESAVE: RTF - table space to content lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0
Keywords: filter:rtf
: 95967 (view as bug list)
Depends on:
Blocks: RTF-Tables
  Show dependency treegraph
 
Reported: 2014-10-09 08:32 UTC by Yousuf Philips (jay) (retired)
Modified: 2019-08-16 06:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (6.25 KB, image/png)
2014-10-11 06:39 UTC, tommy27
Details
When exported by Word margins are correctly imported (44.17 KB, application/rtf)
2014-10-11 21:36 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-10-09 08:32:11 UTC
Steps:
1) Open attachment 107347 [details]
2) Notice left spacing between the table border and the text
2) Save as RTF
3) Reopen RTF
4) Notice the left spacing between the table border is gone.

Confirmed in 3.3.0, 3.6.7 and master.

Version: 4.4.0.0.alpha0+
Build ID: ced24ffba2fa1754c466b7944b0ee06d21292706
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-04_21:36:54
Comment 1 tommy27 2014-10-11 06:39:32 UTC
Created attachment 107697 [details]
screenshot

issue confirmed under Win7x64 using 4.3.2.2

bug reproduced with all these conversions:
.docx -> .rft 
.doc  -> .rtf 
.odt  -> .rtf

added comparative screenshot as well.
status NEW. I add Miklos to CC list.
Comment 2 Luke 2014-10-11 21:36:16 UTC
Created attachment 107724 [details]
When exported by Word margins are correctly imported
Comment 3 Commit Notification 2015-06-15 07:13:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0bedaf9eface97d17787931457f3ffc89ac4216

tdf#84832 RTF export: fix handling of custom table cell margins

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Robinson Tryon (qubit) 2015-12-17 12:53:32 UTC Comment hidden (obsolete)
Comment 5 Miklos Vajna 2016-07-22 21:28:31 UTC
*** Bug 95967 has been marked as a duplicate of this bug. ***
Comment 6 Dennis Kemp 2019-08-16 06:13:48 UTC Comment hidden (spam)