tdf#84832 RTF export: fix handling of custom table cell margins

Change-Id: I3ed42ae4dc007c15d4649f57e1691534088549fc